# aadhaar-age-proof-android

./: README.md
kotlin/: settings.gradle.kts
kotlin/app/: .gitignore  build.gradle.kts
kotlin/app/src/androidTest/java/aadhaar/ageproof/: ExampleInstrumentedTest.kt
kotlin/app/src/main/: AndroidManifest.xml
kotlin/app/src/main/java/aadhaar/ageproof/: AgeProofApplication.kt  AppUtil.kt  ChildScreen.kt  Constants.kt  MainActivity.kt  MainScreen.kt
kotlin/app/src/main/java/aadhaar/ageproof/data/: AgeProofRepository.kt  AgeProofRepositoryImpl.kt  AgeProofUiState.kt  AppContainer.kt  CoroutinesAgeProofRepository.kt  WorkManagerAgeProofRepository.kt
kotlin/app/src/main/java/aadhaar/ageproof/ui/: AgeProofViewModel.kt  ChildScreen.kt  HomeScreen.kt  ImagePicker.kt  MainScreen.kt  NavigationItem.kt  ProveScreen.kt  ScanScreen.kt  VerifyScreen.kt
kotlin/app/src/main/java/aadhaar/ageproof/ui/scanner/: ScannerActivity.kt
kotlin/app/src/main/java/aadhaar/ageproof/workers/: PublicParametersWorker.kt  ResetPublicParametersWorker.kt  WorkerUtils.kt
kotlin/app/src/main/res/drawable/: ic_image.xml  ic_qrcode.xml  ic_update.xml  ic_upload_file.xml  ic_verified.xml
kotlin/app/src/main/res/layout/: barcode_layout.xml
kotlin/app/src/main/res/values/: strings.xml  themes.xml
kotlin/app/src/main/res/xml/: files_path.xml
kotlin/app/src/test/java/aadhaar/ageproof/: ExampleUnitTest.kt
kotlin/gradle/: libs.versions.toml
kotlin/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build-android.sh
rust/src/: lib.rs
(+8 files in other folders)
