[package]
name = "nova-aadhaar-qr-mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "ageproof"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
hex = "0.4.3"
nova-aadhaar-qr = { path = "../../nova-aadhaar-qr" }
nova-snark = { git = "https://github.com/microsoft/Nova.git", default-features = false, rev = "ac8b057cd6fbc2aba7b2888a9b9c37fec9119d45" }
sha2 = { version = "0.10.8", default-features = false }
uniffi = { version = "0.25.3", features = [ "cli" ] }